# Snake

./: .gitignore  Build-Linux.sh  Build-Windows.bat  CMakeLists.txt  README.md
Snake/: Apple.cpp  Apple.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  EmptyCell.cpp  EmptyCell.hpp  Game.cpp  Game.hpp  Renderer.cpp  Renderer.hpp  SnakeBody.cpp  SnakeBody.hpp  SnakeHead.cpp  SnakeHead.hpp  Window.cpp  Window.hpp  main.cpp
